--- a/app/src/main/res/layout/content_photo_detail.xml
+++ b/app/src/main/res/layout/content_photo_detail.xml
@@ -30,7 +30,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
-                    android:text="TextView" />
+                    tools:text="TextView" />
 
                 <ImageView
                     android:id="@+id/photo_image"
@@ -38,6 +38,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
                     android:adjustViewBounds="true"
+                    android:contentDescription="@string/browse_image_description"
                     android:scaleType="fitCenter"
                     app:srcCompat="@drawable/placeholder" />
 
@@ -46,14 +47,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
-                    android:text="TextView" />
+                    tools:text="TextView" />
 
                 <TextView
                     android:id="@+id/photo_tags"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
-                    android:text="TextView" />
+                    tools:text="TextView" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
     </ScrollView>
